[metadata]
name = wfetch
version = 0.0.9
author = zJairO
author_email = hello@zjairo.com
description = Minimal Windows system information tool written in Python 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zJairO/wfetch
project_urls =
    Bug Tracker = https://github.com/zJairO/wfetch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.entry_points]
console_scripts =
    wfetch = wfetch.script:main

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src